# routes/api.php
@@ -97,6 +97,7 @@ Route::group(['prefix' => 'v1/patient', 'middleware' => ['auth:sanctum']], funct
 Route::group(['prefix' => 'v1'], function () {
 
     Route::get('/check-email', ['App\Http\Controllers\BookingController', 'checkEmail']);
+    Route::post('/recover-reg-id', ['App\Http\Controllers\Auth\AuthController', 'recoverRegId']);
     Route::get('/check-phone', ['App\Http\Controllers\BookingController', 'checkPhone']);
     Route::get('/countries', ['App\Http\Controllers\GeneralController', 'countries']);
     Route::get('/states', ['App\Http\Controllers\GeneralController', 'states']);
